--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Toboolist</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <!-- HEADER -->
+  <header>
+    <div id="logo-area">
+      <img id="logo" src="img/Logo.png" alt="Toboolist" title="Toboolist">
+      <span id="logo-title">Toboolist</span>
+      </div>
+  </header>
+  <!-- /HEADER -->
+
+  <!-- MAIN -->
+  <main class="container">
+
+    <div class="top-nav">
+      <button class="sky-color">Add Task</button>
+      <button class="snow-color">Add Section</button>
+    </div>
+    
+  </main>
+  <!-- /MAIN -->
   
 </body>
 </html>
