first content commit

--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
   <!-- MAIN -->
   <main class="container">
 
-    <div class="top-nav">
+    <!-- top nav -->
+    <section class="top-nav">
       <button class="sky-color">Add Task</button>
       <button class="snow-color">Add Section</button>
-    </div>
+    </section>
+    <!-- /top nav -->
+
+    <!-- content -->
+    <section class="content">
+      <div class="menu">
+        <p class="menu-title">
+          <span>New Task</span>
+        </p>
+      </div>
+    </section>
+    <!-- /content -->
     
   </main>
   <!-- /MAIN -->
