--- a/index.html
+++ b/index.html
@@ -71,6 +71,31 @@
           <span class="category mobile">Mobile</span>
         </p>
         <!-- /menu box 2 -->
+
+        <!-- menu box 3 -->
+        <p class="menu-title">
+          <span>Upcoming</span>
+        </p>
+
+        <p class="item">
+          <span class="item-false">Schedule meeting with Alex</span>
+        </p>
+
+        <p class="item">
+          <span class="item-true">Homepage refresh</span>
+          <span class="category website">Website</span>
+        </p>
+
+        <p class="item">
+          <span class="item-true">Onboard new Sales team members</span>
+          <span class="category sales">Sales</span>
+        </p>
+
+        <p class="item">
+          <span class="item-true">Review editorial calendar</span>
+          <span class="category editorial">Editorial</span>
+        </p>
+        <!-- /menu box 3 -->
         
         
       </div>
